--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Query Optimization</string>
+    <string name="loading">Loading</string>
+    <string name="nim">NIM</string>
+    <string name="name">Name</string>
 </resources>
